--- a/SwimCoach/View/Base.lproj/Main.storyboard
+++ b/SwimCoach/View/Base.lproj/Main.storyboard
@@ -342,7 +342,7 @@
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </imageView>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LDv-qi-UQ1">
-                                                    <rect key="frame" x="31.666666666666671" y="117.99999999999999" width="117.00000000000001" height="20.333333333333329"/>
+                                                    <rect key="frame" x="22.666666666666671" y="117.99999999999999" width="135" height="20.333333333333329"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -359,7 +359,7 @@
                                                 <constraint firstItem="LDv-qi-UQ1" firstAttribute="centerX" secondItem="DIz-Js-hGl" secondAttribute="centerX" id="eqE-LP-XDo"/>
                                                 <constraint firstItem="FLS-eS-OLo" firstAttribute="height" secondItem="DIz-Js-hGl" secondAttribute="height" multiplier="0.6" id="fqz-XM-467"/>
                                                 <constraint firstItem="FLS-eS-OLo" firstAttribute="leading" secondItem="DIz-Js-hGl" secondAttribute="leading" id="gRm-96-M4P"/>
-                                                <constraint firstItem="LDv-qi-UQ1" firstAttribute="width" secondItem="DIz-Js-hGl" secondAttribute="width" multiplier="0.65" id="r57-fc-vZh"/>
+                                                <constraint firstItem="LDv-qi-UQ1" firstAttribute="width" secondItem="DIz-Js-hGl" secondAttribute="width" multiplier="0.75" id="r57-fc-vZh"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -419,56 +419,72 @@
                                 <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="personCell" rowHeight="130" translatesAutoresizingMaskIntoConstraints="NO" id="AXF-Y3-xDL" customClass="PersonViewCell" customModule="SwimCoach" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="personCell" rowHeight="130" translatesAutoresizingMaskIntoConstraints="NO" id="AXF-Y3-xDL" customClass="PersonViewCell" customModule="SwimCoach" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="130"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="AXF-Y3-xDL" id="5iW-hb-U7g">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="130"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="8Wu-s1-npQ">
-                                                    <rect key="frame" x="21" y="43.333333333333343" width="187.66666666666666" height="43.666666666666657"/>
-                                                    <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yX4-uR-vNh">
-                                                            <rect key="frame" x="0.0" y="0.0" width="150" height="20.333333333333332"/>
-                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <nil key="highlightedColor"/>
-                                                            <variation key="heightClass=regular-widthClass=regular">
-                                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                                            </variation>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Yn-ON-AEl">
-                                                            <rect key="frame" x="0.0" y="23.333333333333336" width="150" height="20.333333333333336"/>
-                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <nil key="highlightedColor"/>
-                                                            <variation key="heightClass=regular-widthClass=regular">
-                                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                                            </variation>
-                                                        </label>
-                                                    </subviews>
-                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <constraints>
-                                                        <constraint firstItem="3Yn-ON-AEl" firstAttribute="width" secondItem="8Wu-s1-npQ" secondAttribute="width" multiplier="0.8" id="BZE-MD-BNK"/>
-                                                        <constraint firstItem="yX4-uR-vNh" firstAttribute="width" secondItem="8Wu-s1-npQ" secondAttribute="width" multiplier="0.8" id="wdu-vx-aYF"/>
-                                                    </constraints>
-                                                </stackView>
-                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ijh-sf-54w">
-                                                    <rect key="frame" x="305" y="49.666666666666657" width="51" height="31"/>
-                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <color key="onTintColor" red="0.095801420509815216" green="0.58598506450653076" blue="0.11407060176134109" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                </switch>
+                                                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YJL-5T-cxr">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="130"/>
+                                                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="STo-DQ-YPF">
+                                                        <rect key="frame" x="0.0" y="0.0" width="375" height="130"/>
+                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                        <subviews>
+                                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="8Wu-s1-npQ">
+                                                                <rect key="frame" x="8" y="43.333333333333343" width="262.66666666666669" height="43.666666666666657"/>
+                                                                <subviews>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yX4-uR-vNh">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="210" height="20.333333333333332"/>
+                                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                        <variation key="heightClass=regular-widthClass=regular">
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                                        </variation>
+                                                                    </label>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Yn-ON-AEl">
+                                                                        <rect key="frame" x="0.0" y="23.333333333333336" width="210" height="20.333333333333336"/>
+                                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                        <variation key="heightClass=regular-widthClass=regular">
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                                        </variation>
+                                                                    </label>
+                                                                </subviews>
+                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <constraints>
+                                                                    <constraint firstItem="yX4-uR-vNh" firstAttribute="width" secondItem="8Wu-s1-npQ" secondAttribute="width" multiplier="0.8" id="wqD-1g-5hg"/>
+                                                                    <constraint firstItem="3Yn-ON-AEl" firstAttribute="width" secondItem="8Wu-s1-npQ" secondAttribute="width" multiplier="0.8" id="xh8-h7-Lmr"/>
+                                                                </constraints>
+                                                            </stackView>
+                                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ijh-sf-54w">
+                                                                <rect key="frame" x="318" y="49.666666666666657" width="51" height="31"/>
+                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <color key="onTintColor" red="0.095801420509815216" green="0.58598506450653076" blue="0.11407060176134109" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            </switch>
+                                                        </subviews>
+                                                        <constraints>
+                                                            <constraint firstItem="8Wu-s1-npQ" firstAttribute="centerY" secondItem="STo-DQ-YPF" secondAttribute="centerY" id="3tP-FE-Ltv"/>
+                                                            <constraint firstItem="ijh-sf-54w" firstAttribute="centerY" secondItem="STo-DQ-YPF" secondAttribute="centerY" id="Hda-qi-Qod"/>
+                                                            <constraint firstItem="8Wu-s1-npQ" firstAttribute="width" secondItem="STo-DQ-YPF" secondAttribute="width" multiplier="0.7" id="K8k-tf-gfI"/>
+                                                            <constraint firstItem="8Wu-s1-npQ" firstAttribute="leading" secondItem="STo-DQ-YPF" secondAttribute="leading" constant="8" id="hsV-YF-8Fh"/>
+                                                            <constraint firstAttribute="trailing" secondItem="ijh-sf-54w" secondAttribute="trailing" constant="8" id="ohX-Sp-kkw"/>
+                                                        </constraints>
+                                                    </view>
+                                                    <blurEffect style="regular"/>
+                                                </visualEffectView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstItem="ijh-sf-54w" firstAttribute="centerY" secondItem="5iW-hb-U7g" secondAttribute="centerY" id="UjV-rp-v5M"/>
-                                                <constraint firstItem="8Wu-s1-npQ" firstAttribute="leading" secondItem="5iW-hb-U7g" secondAttribute="leadingMargin" constant="5" id="dFX-S2-rrD"/>
-                                                <constraint firstItem="8Wu-s1-npQ" firstAttribute="width" secondItem="5iW-hb-U7g" secondAttribute="width" multiplier="0.5" id="heF-xg-GCh"/>
-                                                <constraint firstItem="8Wu-s1-npQ" firstAttribute="centerY" secondItem="5iW-hb-U7g" secondAttribute="centerY" id="ktg-5l-vJY"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="ijh-sf-54w" secondAttribute="trailing" constant="5" id="ldF-8g-hAX"/>
+                                                <constraint firstAttribute="trailing" secondItem="YJL-5T-cxr" secondAttribute="trailing" id="5rr-0c-Ply"/>
+                                                <constraint firstItem="YJL-5T-cxr" firstAttribute="leading" secondItem="5iW-hb-U7g" secondAttribute="leading" id="9Ov-Bt-pft"/>
+                                                <constraint firstAttribute="bottom" secondItem="YJL-5T-cxr" secondAttribute="bottom" id="ZBo-H8-flu"/>
+                                                <constraint firstItem="YJL-5T-cxr" firstAttribute="top" secondItem="5iW-hb-U7g" secondAttribute="top" id="fGT-Fv-KsS"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
